# fyn-front

./: .babelrc  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: cloudflare_deploy.yml  rust_build.yml  unit_tests.yml
docs/: design.md
public/: index.html
scripts/: fix_generated_rust.sh  generate_api_client.sh
src/: App.css  App.js  lib.rs  main.rs
src/application/: application_service.rs  home.rs  job_service.rs  mod.rs  not_found.rs  register.rs  runner_service.rs  showcase.rs  sign_in.rs  simulate.rs  user_preferences.rs
src/assets/: DataTable.module.css  navigation_bar.css  theme.css  toolbar.module.css
src/common/: base64_utils.rs  mod.rs  size.rs
src/components/: DataTable.js  DynamicSplitScreen.js  SimulationRenderer.js  Toolbar.js  axis_canvas.js  counter_btn.rs  form.js  mod.rs  navigation_bar.js  sign_out.js
src/components/atoms/: alert.rs  button.rs  input.rs  layout.rs  mod.rs  typography.rs
src/components/base/: Button.js  DataTable.js  Form.js  Toolbar.js  data-table.module.css  toolbar.module.css
src/components/container/: ActivitySpace.js  Form.js  NavigationBar.js  SimulationConfiguration.js  activity-space.module.css  form.css  navigation-bar.module.css
src/components/molecules/: button_bar.rs  drop_down.rs  form_field.rs  markdown_render.rs  mod.rs  schema_form.rs  section.rs  table.rs
src/components/organisms/: footer.rs  (+8 more)
src/context/: auth.rs  user_context.js
src/domain/: application_info.rs  job_context.rs  job_info.rs  mod.rs  runner_info.rs  user_context.rs
src/infrastructure/: fyn_api_client.rs  fyn_api_context.rs  fyn_api_service.rs  mod.rs
src/pages/: general_page.css  home.rs  mod.rs  not_found.rs  register.js  register.rs  showcase.rs  sign_in.js  sign_in.rs  simulate.js  simulate.rs
src/presentation/: mod.rs
src/templates/: standard.rs
src/utilities/: api-config.js  api-service.js  api_config.js  api_service.js  cookies.js  three_scene.js
tests/utilities/: api-service.test.js
(+25 files in other folders)
