[package]
name = "fyn-front"
version = "0.1.0"
edition = "2021"
authors = ["bevanwsjones <bevanwsjones@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.6" }

const_format = "0.2"
console_log = "1"
console_error_panic_hook = "0.1"
futures = "0.3.31"
log = "0.4.28"
indexmap = "^2.11"
regex = "^1.0"
reqwest = { version = "0.12", default-features = false }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "^0.4"
web-sys = { version = "^0.3", features = ["Document", "Window", "Element", "DomTokenList", "Response"] }
uuid = { version = "^1.0", features = ["js", "serde"] }

fyn_api = { path = "./fyn_api" }

[dev-dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-test = "^0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
